# Geological-literature-extraction

./: .gitignore  CLAUDE.md  DEVLOG.md  GeoChemExtractor.spec  README.md  build_windows.spec  pyproject.toml  requirements-lock.txt  requirements.txt
docs/: 使用手册.md
geochem_extractor/: __main__.py  app.py  version.py
geochem_extractor/data/: database.py  models.py  project.py  repository.py
geochem_extractor/engine/: classification.py  element_identifier.py  export.py  geochem_parser.py  merger.py  pdf_ingestion.py  table_detection.py  table_extraction.py  unit_converter.py  validation.py  value_cleaner.py
geochem_extractor/geochem/: diagrams.py  indices.py
geochem_extractor/services/: batch_service.py  task_runner.py  update_checker.py
geochem_extractor/ui/: filter_panel.py  main_window.py  project_navigator.py  sample_inspector.py  table_preview.py  theme.py
geochem_extractor/ui/charts/: canvas.py
geochem_extractor/ui/data_grid/: model.py  view.py
geochem_extractor/ui/dialogs/: batch_progress.py  classification.py  conflict_resolution.py  export.py
scripts/: build_exe.sh  migrate_existing_data.py  test_extraction.py  test_parsing.py  test_step5.py
